--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   angular:
     image: 'node:alpine'
+
     user: 'node'
     container_name: poolare-frontend
     working_dir: /home/node/app
@@ -14,3 +15,4 @@ services:
     ports:
       - '4200:4200'
     command: 'sh -c "npm install -g @angular/cli && npm install && ng serve --host 0.0.0.0"'
+    network_mode: poolare-network
